changing ip addresses.

--- a/Assignment2/WebServer/www/root.html
+++ b/Assignment2/WebServer/www/root.html
@@ -32,10 +32,10 @@
 <p class="p1"><span class="s1"><b>API’s To Try:</b></span></p>
 <p class="p1"><span class="s1"><b>Combine Strings :<span class="Apple-converted-space"> </span></b></span></p>
 <p class="p1"><span class="s1"><i>Enter two strings to combine</i></span></p>
-<p class="p1"><span class="s1"><b>http://localhost:9000/CombineStrings?Str1=Hello&amp;Str2=World</b></span></p>
+<p class="p1"><span class="s1"><b>http://52.15.227.232:9000/CombineStrings?Str1=Hello&amp;Str2=World</b></span></p>
 <p class="p1"><span class="s1"><b>Age Calculator :</b></span></p>
 <p class="p1"><span class="s1"><i>Enter your date of birth and a reference date</i></span></p>
-<p class="p1"><span class="s1"><b>http://localhost:9000/Age?DOB=2000-12-18&amp;RefDate=2024-03-25</b></span></p>
+<p class="p1"><span class="s1"><b>http://52.15.227.232:9000/Age?DOB=2000-12-18&amp;RefDate=2024-03-25</b></span></p>
 <p class="p4"><span class="s1"><b></b></span><br></p>
 <h3 style="margin: 0.0px 0.0px 14.0px 0.0px; font: 14.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>File Structure in www (you can use /file/www/FILENAME):</b></span></h3>
 <p class="p5"><span class="s1">${links}</span></p>
